--- a/docs/app/templates/application.hbs
+++ b/docs/app/templates/application.hbs
@@ -1,16 +1,1 @@
-{{page-title 'EmberPerkGridExample'}}
-<nav>
-  <ul>
-    <li>
-      <LinkTo @route="custom-element">
-        Custom Element
-      </LinkTo>
-    </li>
-    <li>
-      <LinkTo @route="apis">
-        APIs
-      </LinkTo>
-    </li>
-  </ul>
-</nav>
-{{outlet}}
+{{page-title 'Event Perk Grid'}}<Nav />{{outlet}}
