Basic docs outline

--- a/docs/app/templates/application.hbs
+++ b/docs/app/templates/application.hbs
@@ -1,1 +1,6 @@
-{{page-title 'Event Perk Grid'}}<Nav />{{outlet}}
+{{page-title 'Event Perk Grid'}}
+<Header />
+<main>
+  {{outlet}}
+</main>
+<Nav />
