--- a/docs/app/components/nav/index.hbs
+++ b/docs/app/components/nav/index.hbs
@@ -1,6 +1,11 @@
 <nav>
   <ul>
     <li>
+      <LinkTo @route="getting-started">
+        Getting Started
+      </LinkTo>
+    </li>
+    <li>
       <LinkTo @route="examples">
         Example Usages
       </LinkTo>
@@ -11,8 +16,8 @@
           </LinkTo>
         </li>
         <li>
-          <LinkTo @route="examples.apis">
-            APIs
+          <LinkTo @route="examples.using-apis">
+            Using APIs
           </LinkTo>
         </li>
       </ul>
