Basic doc styles

--- a/docs/app/components/nav/index.hbs
+++ b/docs/app/components/nav/index.hbs
@@ -1,5 +1,5 @@
-<nav>
-  <ul>
+<nav class="application-nav">
+  <ul class="application-nav-list">
     <li>
       <LinkTo @route="getting-started">
         Getting Started
@@ -9,7 +9,7 @@
       <LinkTo @route="examples">
         Example Usages
       </LinkTo>
-      <ul>
+      <ul class="application-nav-section">
         <li>
           <LinkTo @route="examples.custom-element">
             Custom Element
