--- a/docs/app/templates/application.hbs
+++ b/docs/app/templates/application.hbs
@@ -1,6 +1,8 @@
 {{page-title 'Event Perk Grid'}}
-<Header />
-<main>
-  {{outlet}}
-</main>
-<Nav />
+<div class="application-container">
+  <Header />
+  <Nav />
+  <main class="application">
+    {{outlet}}
+  </main>
+</div>
