--- a/docs/app/templates/index.hbs
+++ b/docs/app/templates/index.hbs
@@ -2,6 +2,10 @@
   Event Perk Grid
 </h1>
 <p>
-  This package provides a utility for reading and displaying a grid of sponsorship packages and their perks using data
-  from the <a href="https://events-app.tilde.io/">Tilde Events App</a> API.
+  This package provides a framework-agnostic utility for reading and displaying a grid of sponsorship packages and their perks using data
+  from the
+  <a href="https://events-app.tilde.io/">
+    Tilde Events App
+  </a>
+  API.
 </p>
