--- a/docs/app/styles/app.css
+++ b/docs/app/styles/app.css
@@ -1,24 +1,7 @@
-@keyframes spinner {
-  to {
-    transform: rotate(360deg);
-  }
-}
+@import './variables.css';
 
-.spinner {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 200px;
-}
+@import './layout.css';
+@import './typography.css';
 
-.spinner::before {
-  display: block;
-  content: '';
-  box-sizing: border-box;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  border: 1px solid #ccc;
-  border-top-color: #777;
-  animation: spinner 0.6s linear infinite;
-}
+@import './code.css';
+@import './spinner.css';
