Render fetched example components and their READMEs

--- a/docs/app/components/code-block.hbs
+++ b/docs/app/components/code-block.hbs
@@ -1,7 +1,7 @@
-<div class="code-block">
-  {{#if @filename}}
+<div class="code-block"...attributes>
+  {{#if @file}}
     <div class="code-block-header">
-      {{@filename}}
+      {{@file}}
     </div>
   {{/if}}
   <div class="code-block-body">
