--- a/docs/app/components/nav/index.hbs
+++ b/docs/app/components/nav/index.hbs
@@ -1,22 +1,27 @@
 <nav class="application-nav">
   <ul class="application-nav-list">
     <li>
-      <LinkTo @route="getting-started">
-        Getting Started
+      <LinkTo @route="installation">
+        Installation
       </LinkTo>
     </li>
     <li>
-      <LinkTo @route="examples">
-        Example Usages
+      <LinkTo @route="usage">
+        Usage
       </LinkTo>
       <ul class="application-nav-section">
         <li>
-          <LinkTo @route="examples.custom-element">
-            Custom Element
+          <LinkTo @route="usage.script-tag-custom-element">
+            Script Tag Custom Element
           </LinkTo>
         </li>
         <li>
-          <LinkTo @route="examples.using-apis">
+          <LinkTo @route="usage.import-custom-element">
+            Import Custom Element
+          </LinkTo>
+        </li>
+        <li>
+          <LinkTo @route="usage.using-apis">
             Using APIs
           </LinkTo>
         </li>
