--- a/docs/app/templates/usage/import-custom-element.hbs
+++ b/docs/app/templates/usage/import-custom-element.hbs
@@ -1,2 +1,37 @@
 {{page-title 'CustomElement'}}
+<h2 {{anchor}}>
+  Registering the Perk Grid element with an import statement
+</h2>
+<p>
+  Register the
+  {{code '<perk-grid>'}}
+  element using an
+  {{code 'import'}}
+  statement, then invoke the element in your template.
+  Optionally, you can also import this library's CSS file to provide minimal CSS grid styles.
+</p>
+<p>
+  The
+  {{code '<perk-grid>'}}
+  element displays a grid of sponsorship packages and their perks using data from the Tilde Events App API.
+</p>
+<h3 {{anchor}}>
+  Attributes
+</h3>
+<p>
+  <ul>
+    <li>
+      {{code 'data-event-id'}} <i>(required)</i>: The ID corresponding to the event.
+    </li>
+    <li>
+      {{code 'data-grid-title'}}: An optional title to be displayed in the first cell.
+    </li>
+    <li>
+      {{code 'data-placeholder-text'}}: Optional placeholder text to override the default text displayed while the data is loading.
+    </li>
+    <li>
+      {{code 'data-error-text'}}: Optional error text to override the default text displayed if there is an error while rendering the element.
+    </li>
+  </ul>
+</p>
 <Example @component="import-custom-element" />
