--- a/docs/app/templates/usage/index.hbs
+++ b/docs/app/templates/usage/index.hbs
@@ -3,13 +3,13 @@
   This library can be used in at least three ways:
   <ol>
     <li>
-      Register a custom <code>perk-grid</code> element using a script tag, then invoke the custom element in your html.
+      Register the {{code "<perk-grid>"}} element using a script tag, then invoke the element in your template.
     </li>
     <li>
-      Register a custom <code>perk-grid</code> element using an `import` statement, then invoke the custom element in your html.
+      Register the {{code "<perk-grid>"}} element using an {{code "import"}} statement, then invoke the element in your template.
     </li>
     <li>
-      Import <code>fetchData</code> and/or <code>render</code> methods directly for a custom implementation.
+      Import {{code "fetchData"}} and/or {{code "render"}} methods directly for a custom implementation.
     </li>
   </ol>
 </p>
