Add docs for using the APIs

--- a/docs/app/templates/usage/import-custom-element.hbs
+++ b/docs/app/templates/usage/import-custom-element.hbs
@@ -1,4 +1,4 @@
-{{page-title 'CustomElement'}}
+{{page-title 'Importing Custom Element'}}
 <h2 {{anchor}}>
   Registering the Perk Grid element with an import statement
 </h2>
