Add script tag custom element docs

--- a/docs/app/components/examples/script-tag-custom-element/index.hbs
+++ b/docs/app/components/examples/script-tag-custom-element/index.hbs
@@ -1,6 +1,7 @@
 <script src='https://unpkg.com/event-perk-grid/dist/custom-element.js'></script>
 
-{{!-- Optionally include this file for basic CSS --}}
+<!-- Optionally include this file for basic CSS -->
 <link rel="stylesheet" href="https://unpkg.com/event-perk-grid/dist/index.css" />
 
+<!-- Replace {{this.eventId}} with your event's ID -->
 <perk-grid data-event-id={{this.eventId}}></perk-grid>
