--- a/docs/app/templates/installation.hbs
+++ b/docs/app/templates/installation.hbs
@@ -13,5 +13,5 @@
   Script Tag
 </h2>
 <CodeBlock
-  @text="<script src='https://unpkg.com/event-perk-grid/dist/custom-element.js'></script>"
+  @text="<script src='https://unpkg.com/event-perk-grid@latest/dist/custom-element.js'></script>"
 />
