--- a/docs/app/components/perk-grid-element-docs.hbs
+++ b/docs/app/components/perk-grid-element-docs.hbs
@@ -1,24 +1,36 @@
 <p>
   The
-  {{code '<perk-grid>'}}
+  {{code "<perk-grid>"}}
   element displays a grid of sponsorship packages and their perks using data from the Tilde Events App API.
+  It also handles loading and error states for the data.
 </p>
 <h3 {{anchor}}>
   Attributes
 </h3>
 <p>
-  <ul>
-    <li>
-      {{code 'data-event-id'}} <i>(required)</i>: The ID corresponding to the event.
-    </li>
-    <li>
-      {{code 'data-grid-title'}}: An optional title to be displayed in the first cell.
-    </li>
-    <li>
-      {{code 'data-placeholder-text'}}: Optional placeholder text to override the default text displayed while the data is loading.
-    </li>
-    <li>
-      {{code 'data-error-text'}}: Optional error text to override the default text displayed if there is an error while rendering the element.
-    </li>
-  </ul>
+  The {{code "data-event-id"}} attribute is required to be set to the ID corresponding to the event.
+  All other attributes are optional.
+  Learn more about optional attributes in the <a href="/api/interfaces/custom_element.PerkGridDataSet.html">API docs</a>.
+</p>
+<h3 {{anchor}}>
+  Events
+</h3>
+<p>
+  When the {{code "<perk-grid>"}} element is rendered or disconnected from the DOM, several events are fired to indicate the element state.
+  Learn more about these events in the API docs for
+  <a href="/api/classes/custom_element.PerkGrid.html#connectedCallback">connectedCallback</a> and
+  <a href="/api/classes/custom_element.PerkGrid.html#disconnectedCallback">disconnectedCallback</a>
+  .
+</p>
+<h3 {{anchor}}>
+  CSS Classes
+</h3>
+<p>
+  See a list of the element's CSS classes
+  <a href="/api/modules/custom_element.html#CLASSES">here</a> and
+  <a href="/api/modules/index.html#CLASSES">here</a>.
+</p>
+<h3 {{anchor}}>Further documentation</h3>
+<p>
+  For more details, see the <a href="/api/modules/custom_element.html">API docs</a>.
 </p>
