--- a/docs/app/templates/index.hbs
+++ b/docs/app/templates/index.hbs
@@ -1,5 +1,5 @@
 <h1>
-  Event Perk Grid
+  <i class="las la-map"></i> Event Perk Grid
 </h1>
 <p>
   This package provides a framework-agnostic utility for reading and displaying a grid of sponsorship packages and their perks using data
@@ -9,3 +9,5 @@
   </a>
   API.
 </p>
+<h2 {{anchor}}>Example</h2>
+<Examples::Apis />
