--- a/docs/app/components/header/index.hbs
+++ b/docs/app/components/header/index.hbs
@@ -4,7 +4,8 @@
       Event Perk Grid
     </h1>
   </LinkTo>
-  <a href="https://github.com/tildeio/event-perk-grid">
+  <a href="https://github.com/tildeio/event-perk-grid" class="repo-link">
     Repo
+    <i class="lab la-github"></i>
   </a>
 </header>
