--- a/docs/app/styles/layout.css
+++ b/docs/app/styles/layout.css
@@ -4,13 +4,13 @@ body {
 }
 
 .application-container {
-  padding: 10px 18px;
+  padding: 2px 18px 40px;
   background: white;
 }
 
 .application-header {
   display: flex;
-  align-items: baseline;
+  align-items: center;
   justify-content: space-between;
   font-size: 16px;
   border-bottom: 1px solid var(--gray-25);
@@ -18,17 +18,27 @@ body {
 
 .application-header h1 {
   font-size: inherit;
+  margin: 0;
+}
+
+.application-header .la-github {
+  font-size: 28px;
+  margin-left: 2px;
+}
+
+.application-header .repo-link {
+  display: flex;
+  align-items: center;
 }
 
 .application-nav-list {
   list-style: none;
   padding: 0;
-  line-height: 1.5;
 }
 
 .application-nav-section {
   list-style: none;
-  padding-left: 18px;
+  padding-left: 14px;
   font-size: 14px;
 }
 
@@ -37,11 +47,9 @@ body {
     --main-header-height: 86px;
 
     display: grid;
-    grid-template-columns: [full-start app-start] auto [app-end nav-start] 180px [nav-end full-end];
+    grid-template-columns: [full-start app-start] auto [app-end nav-start] 216px [nav-end full-end];
     grid-column-gap: 18px;
     grid-template-rows: [full-start header-start] 40px [header-end body-start] auto [body-end full-end];
-    margin: 18px auto;
-    max-width: 640px;
   }
 
   .application-header {
@@ -64,26 +72,9 @@ body {
   }
 }
 
-@media (min-width: 768px) {
-  .application-container {
-    max-width: 768px;
-  }
-}
-
 @media (min-width: 1024px) {
   .application-container {
     max-width: 1024px;
-  }
-}
-
-@media (min-width: 1280px) {
-  .application-container {
-    max-width: 1280px;
-  }
-}
-
-@media (min-width: 1536px) {
-  .application-container {
-    max-width: 1536px;
+    margin: 18px auto;
   }
 }
