--- a/docs/app/styles/typography.css
+++ b/docs/app/styles/typography.css
@@ -11,3 +11,26 @@ a:hover,
 a:active {
   color: var(--neutral-blue-75);
 }
+
+a.active {
+  text-decoration: underline;
+}
+
+p,
+ul,
+ol {
+  line-height: 1.5;
+}
+
+ul,
+ol {
+  padding-inline-start: 20px;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  margin: 20px 0 8px;
+  line-height: 1.25;
+}
