--- a/docs/app/templates/usage/index.hbs
+++ b/docs/app/templates/usage/index.hbs
@@ -1,9 +1,8 @@
-{{!-- FIXME: Links, styles --}}
 <p>
   This library can be used in at least three ways:
   <ol>
     <li>
-      Register the {{code "<perk-grid>"}} element using a {{code '<script>'}} tag tag, then invoke the element in your template.
+      Register the {{code "<perk-grid>"}} element using a {{code "<script>"}} tag tag, then invoke the element in your template.
     </li>
     <li>
       Register the {{code "<perk-grid>"}} element using an {{code "import"}} statement, then invoke the element in your template.
