Add syntax highlighting

--- a/docs/app/components/code-block.hbs
+++ b/docs/app/components/code-block.hbs
@@ -5,7 +5,7 @@
     </div>
   {{/if}}
   <div class="code-block-body">
-    <pre class="code-block-pre">{{@text}}</pre>
+    <pre class="code-block-pre hljs"><code>{{this.highlightedText}}</code></pre>
     <i
       class="code-block-clipboard las
         {{if this.copyText.isRunning 'la-clipboard-check copied' 'la-clipboard'}}"
