--- a/docs/app/templates/installation.hbs
+++ b/docs/app/templates/installation.hbs
@@ -4,14 +4,15 @@
 <h2 {{anchor 'install-with-yarn'}}>
   Yarn
 </h2>
-<CodeBlock @text="yarn add event-perk-grid" />
+<CodeBlock @text="yarn add event-perk-grid" @language="shell" />
 <h2 {{anchor 'install-with-npm'}}>
   NPM
 </h2>
-<CodeBlock @text="npm install event-perk-grid" />
+<CodeBlock @text="npm install event-perk-grid" @language="shell" />
 <h2 {{anchor 'install-with-script-tag'}}>
   Script Tag
 </h2>
 <CodeBlock
   @text="<script src='https://unpkg.com/event-perk-grid@latest/dist/custom-element.js'></script>"
+  @language="html"
 />
