--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,31 @@
 .epg_grid {
   display: grid;
   box-sizing: border-box;
-  grid-template-columns: 2fr repeat(var(--epg-column-count), 1fr);
 }
 
-.epg_rowgroup,
-.epg_row {
-  display: contents;
+.epg_body,
+.epg_footer {
+  display: none;
 }
 
 .epg_cell {
   border: 1px solid black;
+}
+
+.epg_grid.epg_display-as-grid {
+  grid-template-columns:
+    minmax(var(--min-width-perk), var(--max-width-perk))
+    repeat(
+      var(--column-count),
+      minmax(var(--min-width-package), var(--max-width-package))
+    );
+}
+
+.epg_display-as-grid .epg_rowgroup,
+.epg_display-as-grid .epg_row {
+  display: contents; /* Also undoes display:none on the body and footer */
+}
+
+.epg_display-as-grid .epg_package-perk-list {
+  display: none;
 }
