--- a/docs/app/components/nav/index.hbs
+++ b/docs/app/components/nav/index.hbs
@@ -22,7 +22,7 @@
         </li>
         <li>
           <LinkTo @route="usage.using-apis">
-            Using APIs
+            Advanced: Using APIs
           </LinkTo>
         </li>
       </ul>
