Fix API docs links

--- a/docs/app/components/nav/index.hbs
+++ b/docs/app/components/nav/index.hbs
@@ -28,7 +28,7 @@
       </ul>
     </li>
     <li>
-      <a href="/api/index.html">
+      <a href="{{rootURL}}api/index.html">
         API docs
       </a>
     </li>
