--- a/docs/app/components/perk-grid-element-docs.hbs
+++ b/docs/app/components/perk-grid-element-docs.hbs
@@ -10,7 +10,7 @@
 <p>
   The {{code "data-event-id"}} attribute is required to be set to the ID corresponding to the event.
   All other attributes are optional.
-  Learn more about optional attributes in the <a href="/api/interfaces/custom_element.PerkGridDataSet.html">API docs</a>.
+  Learn more about optional attributes in the <a href="{{rootURL}}api/interfaces/custom_element.PerkGridDataSet.html">API docs</a>.
 </p>
 <h3 {{anchor}}>
   Events
@@ -18,8 +18,8 @@
 <p>
   When the {{code "<perk-grid>"}} element is rendered or disconnected from the DOM, several events are fired to indicate the element state.
   Learn more about these events in the API docs for
-  <a href="/api/classes/custom_element.PerkGrid.html#connectedCallback">connectedCallback</a> and
-  <a href="/api/classes/custom_element.PerkGrid.html#disconnectedCallback">disconnectedCallback</a>
+  <a href="{{rootURL}}api/classes/custom_element.PerkGrid.html#connectedCallback">connectedCallback</a> and
+  <a href="{{rootURL}}api/classes/custom_element.PerkGrid.html#disconnectedCallback">disconnectedCallback</a>
   .
 </p>
 <h3 {{anchor}}>
@@ -27,10 +27,10 @@
 </h3>
 <p>
   See a list of the element's CSS classes
-  <a href="/api/modules/custom_element.html#CLASSES">here</a> and
-  <a href="/api/modules/index.html#CLASSES">here</a>.
+  <a href="{{rootURL}}api/modules/custom_element.html#CLASSES">here</a> and
+  <a href="{{rootURL}}api/modules/index.html#CLASSES">here</a>.
 </p>
 <h3 {{anchor}}>Further documentation</h3>
 <p>
-  For more details, see the <a href="/api/modules/custom_element.html">API docs</a>.
+  For more details, see the <a href="{{rootURL}}api/modules/custom_element.html">API docs</a>.
 </p>
