--- a/docs/app/templates/usage/using-apis.hbs
+++ b/docs/app/templates/usage/using-apis.hbs
@@ -26,6 +26,6 @@
 </p>
 <h3 {{anchor}}>API documentation</h3>
 <p>
-  For more details, see the <a href="/api/modules/index.html">API docs</a>.
+  For more details, see the <a href="{{rootURL}}api/modules/index.html">API docs</a>.
 </p>
 <Example @component="apis" />
