Actually fix API docs links

--- a/docs/app/components/nav/index.hbs
+++ b/docs/app/components/nav/index.hbs
@@ -28,9 +28,7 @@
       </ul>
     </li>
     <li>
-      <a href="{{rootURL}}api/index.html">
-        API docs
-      </a>
+      {{api-docs-link "/index.html"}}
     </li>
   </ul>
 </nav>
