--- a/docs/app/components/perk-grid-element-docs.hbs
+++ b/docs/app/components/perk-grid-element-docs.hbs
@@ -10,7 +10,8 @@
 <p>
   The {{code "data-event-id"}} attribute is required to be set to the ID corresponding to the event.
   All other attributes are optional.
-  Learn more about optional attributes in the <a href="{{rootURL}}api/interfaces/custom_element.PerkGridDataSet.html">API docs</a>.
+  Learn more about optional attributes in the
+  {{api-docs-link "/interfaces/custom_element.PerkGridDataSet.html"}}.
 </p>
 <h3 {{anchor}}>
   Events
@@ -18,19 +19,18 @@
 <p>
   When the {{code "<perk-grid>"}} element is rendered or disconnected from the DOM, several events are fired to indicate the element state.
   Learn more about these events in the API docs for
-  <a href="{{rootURL}}api/classes/custom_element.PerkGrid.html#connectedCallback">connectedCallback</a> and
-  <a href="{{rootURL}}api/classes/custom_element.PerkGrid.html#disconnectedCallback">disconnectedCallback</a>
-  .
+  {{api-docs-link "/classes/custom_element.PerkGrid.html#connectedCallback" "connectedCallback"}} and
+  {{api-docs-link "/classes/custom_element.PerkGrid.html#disconnectedCallback" "disconnectedCallback"}}.
 </p>
 <h3 {{anchor}}>
   CSS Classes
 </h3>
 <p>
   See a list of the element's CSS classes
-  <a href="{{rootURL}}api/modules/custom_element.html#CLASSES">here</a> and
-  <a href="{{rootURL}}api/modules/index.html#CLASSES">here</a>.
+  {{api-docs-link "/modules/custom_element.html#CLASSES" "here"}} and
+  {{api-docs-link "/modules/index.html#CLASSES" "here"}}.
 </p>
 <h3 {{anchor}}>Further documentation</h3>
 <p>
-  For more details, see the <a href="{{rootURL}}api/modules/custom_element.html">API docs</a>.
+  For more details, see the {{api-docs-link "/modules/custom_element.html"}}.
 </p>
